--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PLA-simulator</title>
+    <script src="./module.js" defer></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
+    
+
     
 </body>
 </html>
