--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <input id="rowCount" type="number" min="1" max="50" />
         <button onclick="changeSize()">Change Size!</button>
     </header>
+    <div id="PLA-container">
+
     <div id="PLA"></div>
+    </div>
 
 
 </body>
